fixed some errors dealing with routing