@@ -2,23 +2,8 @@ package tn.supcom.cot.iam.boundaries;
 
 import jakarta.enterprise.context.RequestScoped;
 import jakarta.inject.Inject;
-
-import jakarta.ws.rs.Consumes;
-import jakarta.ws.rs.CookieParam;
-import jakarta.ws.rs.FormParam;
-import jakarta.ws.rs.GET;
-import jakarta.ws.rs.PATCH;
-import jakarta.ws.rs.POST;
-import jakarta.ws.rs.Path;
-import jakarta.ws.rs.Produces;
-import jakarta.ws.rs.core.Context;
-import jakarta.ws.rs.core.Cookie;
-import jakarta.ws.rs.core.MediaType;
-import jakarta.ws.rs.core.NewCookie;
-import jakarta.ws.rs.core.Response;
-import jakarta.ws.rs.core.StreamingOutput;
-import jakarta.ws.rs.core.UriBuilder;
-import jakarta.ws.rs.core.UriInfo;
+import jakarta.ws.rs.*;
+import jakarta.ws.rs.core.*;
 import tn.supcom.cot.iam.controllers.managers.PhoenixIAMManager;
 import tn.supcom.cot.iam.entities.Grant;
 import tn.supcom.cot.iam.entities.Identity;
@@ -31,378 +16,607 @@ import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.logging.Logger;
 
-
+/**
+ * OAuth2 Authorization Endpoint with PKCE Support
+ * Handles authorization requests, user login, and consent management
+ */
 @Path("/")
 @RequestScoped
 public class AuthenticationEndpoint {
-    public static final String CHALLENGE_RESPONSE_COOKIE_ID = "signInId";
+
+    private static final String COOKIE_ID = "signInId";
+    private static final int COOKIE_MAX_AGE = 600; // 10 minutes
+
     @Inject
     private Logger logger;
 
     @Inject
-    PhoenixIAMManager phoenixIAMManager;
+    private PhoenixIAMManager iamManager;
 
+    /**
+     * OAuth2 Authorization Endpoint
+     * GET /authorize?client_id=...&redirect_uri=...&response_type=code&scope=...&code_challenge=...&state=...
+     */
     @GET
-    @Produces(MediaType.TEXT_HTML)
     @Path("/authorize")
+    @Produces(MediaType.TEXT_HTML)
     public Response authorize(@Context UriInfo uriInfo) {
-        var params = uriInfo.getQueryParameters();
-        //1. Check tenant
-        var clientId = params.getFirst("client_id");
-        if (clientId == null || clientId.isEmpty()) {
-            return informUserAboutError("Invalid client_id :" + clientId);
-        }
-        var tenant = phoenixIAMManager.findTenantByName(clientId);
-        if (tenant == null) {
-            return informUserAboutError("Invalid client_id :" + clientId);
-        }
-        //2. Client Authorized Grant Type
-        if (tenant.getSupportedGrantTypes() != null && !tenant.getSupportedGrantTypes().contains("authorization_code")) {
-            return informUserAboutError("Authorization Grant type, authorization_code, is not allowed for this tenant :" + clientId);
-        }
-        //3. redirectUri
-        String redirectUri = params.getFirst("redirect_uri");
-        if (tenant.getRedirectUri() != null && !tenant.getRedirectUri().isEmpty()) {
-            if (redirectUri != null && !redirectUri.isEmpty() && !tenant.getRedirectUri().equals(redirectUri)) {
-                //sould be in the client.redirectUri
-                return informUserAboutError("redirect_uri is pre-registred and should match");
-            }
-            redirectUri = tenant.getRedirectUri();
-        } else {
-            if (redirectUri == null || redirectUri.isEmpty()) {
-                return informUserAboutError("redirect_uri is not pre-registred and should be provided");
-            }
-        }
+        try {
+            MultivaluedMap<String, String> params = uriInfo.getQueryParameters();
 
-        //4. response_type
-        String responseType = params.getFirst("response_type");
-        if (!"code".equals(responseType) && !"token".equals(responseType)) {
-            String error = "invalid_grant :" + responseType + ", response_type params should be code or token:";
-            return informUserAboutError(error);
-        }
+            // Validate OAuth2 parameters
+            AuthorizationRequest authRequest = validateAuthorizationRequest(params);
 
-        //5. check scope
-        String requestedScope = params.getFirst("scope");
-        if (requestedScope == null || requestedScope.isEmpty()) {
-            requestedScope = tenant.getRequiredScopes();
+            // Create session cookie
+            String cookieValue = buildCookieValue(authRequest);
+            NewCookie sessionCookie = createSessionCookie(cookieValue);
+
+            logger.info("Authorization request validated for client: " + authRequest.clientId);
+
+            // Return login page
+            return Response.ok(loadHtmlResource("/login.html"))
+                    .cookie(sessionCookie)
+                    .build();
+
+        } catch (InvalidRequestException e) {
+            logger.warning("Invalid authorization request: " + e.getMessage());
+            return buildErrorResponse(e.getMessage());
+        } catch (Exception e) {
+            logger.severe("Error processing authorization request: " + e.getMessage());
+            return buildErrorResponse("Internal server error");
         }
-        //6. code_challenge_method must be S256
-        String codeChallengeMethod = params.getFirst("code_challenge_method");
-        if(codeChallengeMethod==null || !codeChallengeMethod.equals("S256")){
-            String error = "invalid_grant :" + codeChallengeMethod + ", code_challenge_method must be 'S256'";
-            return informUserAboutError(error);
-        }
-        StreamingOutput stream = output -> {
-            try (InputStream is = Objects.requireNonNull(getClass().getResource("/login.html")).openStream()){
-                output.write(is.readAllBytes());
-            }
-        };
-        return Response.ok(stream).location(uriInfo.getBaseUri().resolve("/login/authorization"))
-                .cookie(new NewCookie.Builder(CHALLENGE_RESPONSE_COOKIE_ID)
-                        .httpOnly(true)
-                        .secure(false) // Changed to false for HTTP
-                        .sameSite(NewCookie.SameSite.LAX) // Changed to LAX for better compatibility
-                        .path("/") // Added path
-                        .maxAge(600) // Added max age (10 minutes)
-                        .value(tenant.getName()+"#"+requestedScope+"$"+redirectUri+"&"+params.getFirst("response_type")+"@"+params.getFirst("code_challenge")+"!"+params.getFirst("state"))
-                        .build()).build();
     }
 
+    /**
+     * Registration Page
+     * GET /register
+     */
     @GET
     @Path("/register")
     @Produces(MediaType.TEXT_HTML)
-    public Response registerPage(@Context UriInfo uriInfo) {
-        StreamingOutput stream = output -> {
-            try (InputStream is = Objects.requireNonNull(getClass().getResource("/register.html")).openStream()){
-                output.write(is.readAllBytes());
-            }
-        };
-        return Response.ok(stream).build();
+    public Response showRegistrationPage(@Context UriInfo uriInfo) {
+        return Response.ok(loadHtmlResource("/register.html")).build();
     }
 
+    /**
+     * User Registration Endpoint
+     * POST /register
+     */
     @POST
     @Path("/register")
     @Consumes(MediaType.APPLICATION_FORM_URLENCODED)
-    public Response register(@FormParam("username") String username,
-                             @FormParam("password") String password,
-                             @FormParam("confirm_password") String confirmPassword,
-                             @FormParam("client_id") String clientId,
-                             @FormParam("redirect_uri") String redirectUri,
-                             @FormParam("scope") String scope,
-                             @FormParam("response_type") String responseType,
-                             @FormParam("code_challenge") String codeChallenge,
-                             @FormParam("state") String state) {
-        
-        if (!password.equals(confirmPassword)) {
-             return informUserAboutError("Passwords do not match");
-        }
-        
+    @Produces(MediaType.TEXT_HTML)
+    public Response register(
+            @FormParam("username") String username,
+            @FormParam("password") String password,
+            @FormParam("confirm_password") String confirmPassword,
+            @FormParam("client_id") String clientId,
+            @FormParam("redirect_uri") String redirectUri,
+            @FormParam("scope") String scope,
+            @FormParam("response_type") String responseType,
+            @FormParam("code_challenge") String codeChallenge,
+            @FormParam("state") String state) {
+
         try {
-            Identity newIdentity = phoenixIAMManager.createIdentity(username, password);
-            
-            // After registration, show consent page (only time user will see it)
-            if (clientId != null && redirectUri != null) {
-                // Create cookie with OAuth params - store username for the grant
-                // Format: clientId#scope$redirectUri&responseType@codeChallenge!state%username
-                String cookieValue = clientId + "#" + (scope != null ? scope : "openid") + "$" 
-                    + redirectUri + "&" + (responseType != null ? responseType : "code") 
-                    + "@" + (codeChallenge != null ? codeChallenge : "") 
-                    + "!" + (state != null ? state : "")
-                    + "%" + username; // Add username to cookie
-                NewCookie cookie = new NewCookie.Builder(CHALLENGE_RESPONSE_COOKIE_ID)
-                        .value(cookieValue)
-                        .path("/")
-                        .httpOnly(true)
-                        .secure(false)
-                        .maxAge(600)
-                        .build();
-                
-                // Load consent page
-                StreamingOutput stream = output -> {
-                    try (InputStream is = Objects.requireNonNull(getClass().getResource("/consent.html")).openStream()){
-                        String html = new String(is.readAllBytes());
-                        html = html.replace("{{scope}}", scope != null ? scope : "openid")
-                                   .replace("{{username}}", username);
-                        output.write(html.getBytes());
-                    }
-                };
-                return Response.ok(stream).cookie(cookie).build();
+            // Validate passwords
+            validatePasswords(password, confirmPassword);
+
+            // Create identity
+            Identity identity = iamManager.createIdentity(username, password);
+            logger.info("Successfully registered user: " + username);
+
+            // If OAuth parameters present, show consent
+            if (clientId != null && !clientId.isEmpty()) {
+                return showConsentPage(username, clientId, redirectUri, scope,
+                        responseType, codeChallenge, state);
             }
-            
-            return Response.ok("Registration successful! You can now login.").build();
-            
+
+            return buildSuccessResponse("Registration successful! You can now login.");
+
+        } catch (IllegalArgumentException e) {
+            return buildErrorResponse("Username already exists");
+        } catch (InvalidRequestException e) {
+            return buildErrorResponse(e.getMessage());
         } catch (Exception e) {
-            return informUserAboutError("Registration failed: " + e.getMessage());
+            logger.severe("Registration error: " + e.getMessage());
+            return buildErrorResponse("Registration failed: " + e.getMessage());
         }
     }
 
-    private String cipher(String codeChallenge) {
-        return null;
-    }
-
+    /**
+     * User Login Endpoint
+     * POST /login/authorization
+     */
     @POST
     @Path("/login/authorization")
     @Consumes(MediaType.APPLICATION_FORM_URLENCODED)
     @Produces(MediaType.TEXT_HTML)
-    public Response login(@CookieParam(CHALLENGE_RESPONSE_COOKIE_ID) Cookie cookie,
-                          @FormParam("username")String username,
-                          @FormParam("password")String password,
-                          @Context UriInfo uriInfo) throws Exception {
-        Identity identity = phoenixIAMManager.findIdentityByName(username);
-        if(Argon2Utility.check(identity.getPassword(),password.toCharArray())){
-            logger.info("Authenticated identity:"+username);
-            
-            // Parse OAuth params from cookie: tenant#scope$redirectUri&responseType@codeChallenge!state
-            String cookieValue = cookie.getValue();
-            logger.info("LOGIN DEBUG - Cookie: " + cookieValue);
-            
-            String[] parts = cookieValue.split("\\$");
-            String clientId = cookieValue.split("#")[0];
-            String requestedScope = cookieValue.split("#")[1].split("\\$")[0];
-            String redirectUri = parts[1].split("&")[0];
-            
-            String responseType = "code";
-            String codeChallenge = null;
-            String state = null;
-            
-            if (parts.length > 1 && parts[1].contains("&")) {
-                String[] oauthParams = parts[1].split("&");
-                if (oauthParams.length > 1) {
-                    responseType = oauthParams[1].split("@")[0];
-                    if (oauthParams[1].contains("@")) {
-                        String afterAt = oauthParams[1].split("@")[1];
-                        codeChallenge = afterAt.split("!")[0];
-                        if (afterAt.contains("!")) {
-                            state = afterAt.split("!")[1];
-                        }
-                    }
-                }
+    public Response login(
+            @CookieParam(COOKIE_ID) Cookie sessionCookie,
+            @FormParam("username") String username,
+            @FormParam("password") String password) {
+
+        try {
+            // Validate session
+            if (sessionCookie == null || sessionCookie.getValue() == null) {
+                return buildErrorResponse("Session expired. Please try again.");
             }
-            
-            logger.info("LOGIN DEBUG - Parsed state: '" + state + "'");
-            logger.info("LOGIN DEBUG - Code challenge: " + codeChallenge);
-            
-            // Login NEVER shows consent - always redirect directly
-            String redirectURI = buildActualRedirectURI(
-                    redirectUri, responseType,
-                    clientId,
-                    username,
-                    requestedScope,
-                    codeChallenge, state
-            );
-            logger.info("LOGIN DEBUG - Redirect URI: " + redirectURI);
-            return Response.seeOther(UriBuilder.fromUri(redirectURI).build()).build();
-        } else {
-            logger.info("Failure when authenticating identity:"+username);
-            URI location = UriBuilder.fromUri(cookie.getValue().split("\\$")[1].split("&")[0])
-                    .queryParam("error", "Invalid credentials.")
-                    .queryParam("error_description", "Invalid username or password.")
-                    .build();
-            return Response.seeOther(location).build();
+
+            // Authenticate user
+            Identity identity = authenticateUser(username, password);
+            logger.info("User authenticated: " + username);
+
+            // Parse OAuth parameters from cookie
+            AuthorizationRequest authRequest = parseCookieValue(sessionCookie.getValue());
+
+            // Check for existing grant (consent)
+            Optional<Grant> existingGrant = iamManager.findGrant(
+                    authRequest.clientId, identity.getId());
+
+            if (existingGrant.isPresent()) {
+                // User already gave consent - redirect directly
+                logger.info("Existing grant found, skipping consent");
+                String redirectUri = buildRedirectUri(authRequest, username,
+                        existingGrant.get().getApprovedScopes());
+                return Response.seeOther(URI.create(redirectUri)).build();
+            } else {
+                // First time - show consent page
+                logger.info("No grant found, showing consent page");
+                return showConsentPageWithCookie(username, authRequest);
+            }
+
+        } catch (InvalidCredentialsException e) {
+            logger.info("Failed login attempt for: " + username);
+            return buildErrorResponse("Invalid username or password");
+        } catch (Exception e) {
+            logger.severe("Login error: " + e.getMessage());
+            return buildErrorResponse("Login failed. Please try again.");
         }
     }
 
+    /**
+     * Consent Endpoint (POST)
+     * POST /login/authorization/consent
+     */
     @POST
     @Path("/login/authorization/consent")
     @Consumes(MediaType.APPLICATION_FORM_URLENCODED)
-    public Response grantConsentPost(@CookieParam(CHALLENGE_RESPONSE_COOKIE_ID) Cookie cookie,
-                                     @FormParam("approved_scope") String scope,
-                                     @FormParam("approval_status") String approvalStatus,
-                                     @FormParam("username") String username){
-        return grantConsent(cookie, scope, approvalStatus, username);
+    public Response handleConsent(
+            @CookieParam(COOKIE_ID) Cookie sessionCookie,
+            @FormParam("approved_scope") String approvedScopes,
+            @FormParam("approval_status") String approvalStatus,
+            @FormParam("username") String username) {
+
+        return processConsent(sessionCookie, approvedScopes, approvalStatus, username);
     }
 
+    /**
+     * Consent Endpoint (PATCH) - For X-HTTP-Method-Override support
+     * PATCH /login/authorization
+     */
     @PATCH
     @Path("/login/authorization")
     @Consumes(MediaType.APPLICATION_FORM_URLENCODED)
-    public Response grantConsent(@CookieParam(CHALLENGE_RESPONSE_COOKIE_ID) Cookie cookie,
-                                 @FormParam("approved_scope") String scope,
-                                 @FormParam("approval_status") String approvalStatus,
-                                 @FormParam("username") String username){
+    public Response handleConsentPatch(
+            @CookieParam(COOKIE_ID) Cookie sessionCookie,
+            @FormParam("approved_scope") String approvedScopes,
+            @FormParam("approval_status") String approvalStatus,
+            @FormParam("username") String username) {
+
+        return processConsent(sessionCookie, approvedScopes, approvalStatus, username);
+    }
+
+    // ==================== Private Helper Methods ====================
+
+    private Response processConsent(Cookie sessionCookie, String approvedScopes,
+                                    String approvalStatus, String username) {
         try {
-            logger.info("=== CONSENT DEBUG ===");
-            logger.info("Cookie value: " + cookie.getValue());
-            logger.info("Approved scope: " + scope);
-            logger.info("Approval status: " + approvalStatus);
-            logger.info("Username from form: " + username);
-            
-            // Parse cookie: clientId#scope$redirectUri&responseType@codeChallenge!state%username
-            String cookieValue = cookie.getValue();
-            
-            // First split by % to get username (if it exists - added during registration)
-            String[] usernameParts = cookieValue.split("%");
-            String usernameFromCookie = (usernameParts.length > 1) ? usernameParts[1] : username;
-            String oauthPart = usernameParts[0];
-            
-            String[] parts = oauthPart.split("\\$");
-            
-            logger.info("Parts after $ split: " + String.join(" | ", parts));
-            logger.info("Username to use: " + usernameFromCookie);
-            
-            // Extract redirect URI and remaining OAuth params
-            String redirectUriAndParams = parts[1];
-            String[] uriAndParams = redirectUriAndParams.split("&", 2);
-            String redirectUri = uriAndParams[0];
-            
-            logger.info("Redirect URI: " + redirectUri);
-            logger.info("Remaining params: " + (uriAndParams.length > 1 ? uriAndParams[1] : "NONE"));
-            
-            // Parse responseType@codeChallenge!state
-            String responseType = "code";
-            String codeChallenge = "";
-            String state = "";
-            
-            if (uriAndParams.length > 1) {
-                String remainingParams = uriAndParams[1]; // "responseType@codeChallenge!state"
-                String[] typeAndRest = remainingParams.split("@", 2);
-                responseType = typeAndRest[0];
-                
+            if (sessionCookie == null || sessionCookie.getValue() == null) {
+                return buildErrorResponse("Session expired");
+            }
+
+            AuthorizationRequest authRequest = parseCookieValue(sessionCookie.getValue());
+
+            // Extract username from cookie if not in form
+            if (username == null || username.isEmpty()) {
+                username = authRequest.username;
+            }
+
+            // Handle denial
+            if ("NO".equals(approvalStatus)) {
+                logger.info("User denied consent: " + username);
+                return redirectWithError(authRequest.redirectUri, "access_denied",
+                        "User denied the request", authRequest.state);
+            }
+
+            // Validate approved scopes
+            if (approvedScopes == null || approvedScopes.trim().isEmpty()) {
+                return redirectWithError(authRequest.redirectUri, "invalid_scope",
+                        "No scopes approved", authRequest.state);
+            }
+
+            // Save grant
+            iamManager.saveGrant(authRequest.clientId, username, approvedScopes);
+            logger.info("Grant saved for user: " + username);
+
+            // Generate authorization code and redirect
+            String redirectUri = buildRedirectUri(authRequest, username, approvedScopes);
+            return Response.seeOther(URI.create(redirectUri)).build();
+
+        } catch (Exception e) {
+            logger.severe("Consent processing error: " + e.getMessage());
+            return buildErrorResponse("An error occurred processing your consent");
+        }
+    }
+
+    private AuthorizationRequest validateAuthorizationRequest(
+            MultivaluedMap<String, String> params) throws InvalidRequestException {
+
+        AuthorizationRequest request = new AuthorizationRequest();
+
+        // Validate client_id
+        request.clientId = params.getFirst("client_id");
+        if (request.clientId == null || request.clientId.isEmpty()) {
+            throw new InvalidRequestException("client_id is required");
+        }
+
+        var tenant = iamManager.findTenantByName(request.clientId);
+        if (tenant == null) {
+            throw new InvalidRequestException("Unknown client: " + request.clientId);
+        }
+
+        // Validate grant type support
+        if (tenant.getSupportedGrantTypes() != null &&
+                !tenant.getSupportedGrantTypes().contains("authorization_code")) {
+            throw new InvalidRequestException("Authorization code flow not supported");
+        }
+
+        // Validate redirect_uri
+        request.redirectUri = params.getFirst("redirect_uri");
+        if (tenant.getRedirectUri() != null && !tenant.getRedirectUri().isEmpty()) {
+            if (request.redirectUri != null && !request.redirectUri.isEmpty() &&
+                    !tenant.getRedirectUri().equals(request.redirectUri)) {
+                throw new InvalidRequestException("redirect_uri mismatch");
+            }
+            request.redirectUri = tenant.getRedirectUri();
+        } else {
+            if (request.redirectUri == null || request.redirectUri.isEmpty()) {
+                throw new InvalidRequestException("redirect_uri is required");
+            }
+        }
+
+        // Validate response_type
+        request.responseType = params.getFirst("response_type");
+        if (!"code".equals(request.responseType)) {
+            throw new InvalidRequestException("Only response_type=code is supported");
+        }
+
+        // Validate PKCE
+        request.codeChallengeMethod = params.getFirst("code_challenge_method");
+        if (!"S256".equals(request.codeChallengeMethod)) {
+            throw new InvalidRequestException("code_challenge_method must be S256");
+        }
+
+        request.codeChallenge = params.getFirst("code_challenge");
+        if (request.codeChallenge == null || request.codeChallenge.isEmpty()) {
+            throw new InvalidRequestException("code_challenge is required");
+        }
+
+        // Handle scope
+        request.scope = params.getFirst("scope");
+        if (request.scope == null || request.scope.isEmpty()) {
+            request.scope = tenant.getRequiredScopes();
+        }
+
+        // Get state
+        request.state = params.getFirst("state");
+        if (request.state == null || request.state.isEmpty()) {
+            logger.warning("No state parameter - CSRF protection weakened");
+        }
+
+        return request;
+    }
+
+    private void validatePasswords(String password, String confirmPassword)
+            throws InvalidRequestException {
+        if (password == null || password.isEmpty()) {
+            throw new InvalidRequestException("Password is required");
+        }
+        if (!password.equals(confirmPassword)) {
+            throw new InvalidRequestException("Passwords do not match");
+        }
+        if (password.length() < 8) {
+            throw new InvalidRequestException("Password must be at least 8 characters");
+        }
+    }
+
+    private Identity authenticateUser(String username, String password)
+            throws InvalidCredentialsException {
+        try {
+            Identity identity = iamManager.findIdentityByName(username);
+            if (!Argon2Utility.check(identity.getPassword(), password.toCharArray())) {
+                throw new InvalidCredentialsException("Invalid credentials");
+            }
+            return identity;
+        } catch (IllegalArgumentException e) {
+            throw new InvalidCredentialsException("Invalid credentials");
+        }
+    }
+
+    private String buildCookieValue(AuthorizationRequest request) {
+        return String.format("%s#%s$%s&%s@%s!%s",
+                request.clientId,
+                request.scope,
+                request.redirectUri,
+                request.responseType,
+                request.codeChallenge,
+                request.state != null ? request.state : ""
+        );
+    }
+
+    private AuthorizationRequest parseCookieValue(String cookieValue) {
+        AuthorizationRequest request = new AuthorizationRequest();
+
+        // Split by % to get username if present
+        String[] usernameParts = cookieValue.split("%");
+        if (usernameParts.length > 1) {
+            request.username = usernameParts[1];
+            cookieValue = usernameParts[0];
+        }
+
+        // Parse: clientId#scope$redirectUri&responseType@codeChallenge!state
+        String[] mainParts = cookieValue.split("\\$");
+
+        // clientId#scope
+        String[] clientScope = mainParts[0].split("#");
+        request.clientId = clientScope[0];
+        request.scope = clientScope[1];
+
+        // redirectUri&responseType@codeChallenge!state
+        if (mainParts.length > 1) {
+            String[] uriAndRest = mainParts[1].split("&", 2);
+            request.redirectUri = uriAndRest[0];
+
+            if (uriAndRest.length > 1) {
+                String[] typeAndRest = uriAndRest[1].split("@", 2);
+                request.responseType = typeAndRest[0];
+
                 if (typeAndRest.length > 1) {
-                    String challengeAndState = typeAndRest[1]; // "codeChallenge!state"
-                    String[] challengeStateParts = challengeAndState.split("!", 2);
-                    codeChallenge = challengeStateParts[0];
-                    if (challengeStateParts.length > 1) {
-                        state = challengeStateParts[1];
+                    String[] challengeAndState = typeAndRest[1].split("!", 2);
+                    request.codeChallenge = challengeAndState[0];
+                    if (challengeAndState.length > 1) {
+                        request.state = challengeAndState[1];
                     }
                 }
             }
-            
-            logger.info("Parsed - responseType: " + responseType + ", codeChallenge: " + codeChallenge + ", state: " + state);
-            
-            if ("NO".equals(approvalStatus)) {
-                var location = UriBuilder.fromUri(redirectUri)
-                        .queryParam("error", "User doesn't approved the request.")
-                        .queryParam("error_description", "User doesn't approved the request.")
-                        .build();
-                return Response.seeOther(location).build();
+        }
+
+        return request;
+    }
+
+    private String buildRedirectUri(AuthorizationRequest request, String username,
+                                    String approvedScopes) throws Exception {
+        AuthorizationCode authCode = new AuthorizationCode(
+                request.clientId,
+                username,
+                approvedScopes,
+                Instant.now().plus(2, ChronoUnit.MINUTES).getEpochSecond(),
+                request.redirectUri
+        );
+
+        String code = URLEncoder.encode(
+                authCode.getCode(request.codeChallenge),
+                StandardCharsets.UTF_8
+        );
+
+        StringBuilder uri = new StringBuilder(request.redirectUri);
+        uri.append("?code=").append(code);
+
+        if (request.state != null && !request.state.isEmpty()) {
+            uri.append("&state=").append(
+                    URLEncoder.encode(request.state, StandardCharsets.UTF_8)
+            );
+        }
+
+        return uri.toString();
+    }
+
+    private Response redirectWithError(String redirectUri, String error,
+                                       String errorDescription, String state) {
+        try {
+            UriBuilder builder = UriBuilder.fromUri(redirectUri)
+                    .queryParam("error", error)
+                    .queryParam("error_description", errorDescription);
+
+            if (state != null && !state.isEmpty()) {
+                builder.queryParam("state", state);
             }
-            //==> YES
-            List<String> approvedScopes = Arrays.stream(scope.split(" ")).toList();
-            if (approvedScopes.isEmpty()) {
-                var location = UriBuilder.fromUri(redirectUri)
-                        .queryParam("error", "User hasn't approved the request.")
-                        .queryParam("error_description", "User hasn't approved the request.")
-                        .build();
-                return Response.seeOther(location).build();
-            }
-            
-            String clientId = cookieValue.split("#")[0];
-            
-            // Save the grant so user won't see consent page again - use username from cookie
-            phoenixIAMManager.saveGrant(clientId, usernameFromCookie, String.join(" ", approvedScopes));
-            
-            // Ensure we have a valid codeChallenge (can't be empty for PKCE)
-            if (codeChallenge == null || codeChallenge.isEmpty()) {
-                logger.warning("Missing code_challenge!");
-                var location = UriBuilder.fromUri(redirectUri)
-                        .queryParam("error", "invalid_request")
-                        .queryParam("error_description", "Missing code_challenge parameter")
-                        .build();
-                return Response.seeOther(location).build();
-            }
-            
-            return Response.seeOther(UriBuilder.fromUri(buildActualRedirectURI(
-                    redirectUri, responseType,
-                    clientId, usernameFromCookie, String.join(" ", approvedScopes), 
-                    codeChallenge, 
-                    state.isEmpty() ? null : state
-            )).build()).build();
+
+            return Response.seeOther(builder.build()).build();
         } catch (Exception e) {
-            logger.severe("Error in grantConsent: " + e.getMessage());
-            e.printStackTrace();
+            return buildErrorResponse(errorDescription);
+        }
+    }
+
+    private Response showConsentPage(String username, String clientId,
+                                     String redirectUri, String scope,
+                                     String responseType, String codeChallenge,
+                                     String state) {
+        String cookieValue = String.format("%s#%s$%s&%s@%s!%s%%%s",
+                clientId,
+                scope != null ? scope : "resource.read resource.write",
+                redirectUri,
+                responseType != null ? responseType : "code",
+                codeChallenge != null ? codeChallenge : "",
+                state != null ? state : "",
+                username
+        );
+
+        NewCookie cookie = createSessionCookie(cookieValue);
+        String html = loadHtmlResource("/consent.html")
+                .replace("{{scope}}", scope != null ? scope : "resource.read resource.write")
+                .replace("{{username}}", username);
+
+        return Response.ok(html).cookie(cookie).build();
+    }
+
+    private Response showConsentPageWithCookie(String username,
+                                               AuthorizationRequest request) {
+        String cookieValue = buildCookieValue(request) + "%" + username;
+        NewCookie cookie = createSessionCookie(cookieValue);
+
+        String html = loadHtmlResource("/consent.html")
+                .replace("{{scope}}", request.scope)
+                .replace("{{username}}", username);
+
+        return Response.ok(html).cookie(cookie).build();
+    }
+
+    private NewCookie createSessionCookie(String value) {
+        return new NewCookie.Builder(COOKIE_ID)
+                .value(value)
+                .path("/")
+                .httpOnly(true)
+                .secure(false) // Set to true in production with HTTPS
+                .sameSite(NewCookie.SameSite.LAX)
+                .maxAge(COOKIE_MAX_AGE)
+                .build();
+    }
+
+    private String loadHtmlResource(String resourcePath) {
+        try (InputStream is = getClass().getResourceAsStream(resourcePath)) {
+            if (is == null) {
+                throw new RuntimeException("Resource not found: " + resourcePath);
+            }
+            return new String(is.readAllBytes(), StandardCharsets.UTF_8);
+        } catch (Exception e) {
+            logger.severe("Error loading resource: " + resourcePath);
             throw new RuntimeException(e);
         }
     }
 
-    private String buildActualRedirectURI(String redirectUri,String responseType,String clientId,String userId,String approvedScopes,String codeChallenge,String state) throws Exception {
-        var sb = new StringBuilder(redirectUri);
-        if ("code".equals(responseType)) {
-            var authorizationCode = new AuthorizationCode(clientId,userId,
-                    approvedScopes, Instant.now().plus(2, ChronoUnit.MINUTES).getEpochSecond(),redirectUri);
-            sb.append("?code=").append(URLEncoder.encode(authorizationCode.getCode(codeChallenge), StandardCharsets.UTF_8));
-        } else {
-            //Implicit: responseType=token : Not Supported
-            return null;
-        }
-        if (state != null) {
-            sb.append("&state=").append(state);
-        }
-        return sb.toString();
-    }
-
-    private String checkUserScopes(String userScopes, String requestedScope) {
-        Set<String> allowedScopes = new LinkedHashSet<>();
-        Set<String> rScopes = new HashSet<>(Arrays.asList(requestedScope.split(" ")));
-        Set<String> uScopes = new HashSet<>(Arrays.asList(userScopes.split(" ")));
-        for (String scope : uScopes) {
-            if (rScopes.contains(scope)) allowedScopes.add(scope);
-        }
-        return String.join( " ", allowedScopes);
-    }
-
-    private Response informUserAboutError(String error) {
-        return Response.status(Response.Status.BAD_REQUEST).entity("""
-                <!DOCTYPE html>
-                <html>
-                <head>
-                    <meta charset="UTF-8"/>
-                    <title>Error</title>
-                </head>
-                <body>
-                <aside class="container">
+    private Response buildErrorResponse(String errorMessage) {
+        String html = String.format("""
+            <!DOCTYPE html>
+            <html>
+            <head>
+                <meta charset="UTF-8"/>
+                <title>Error - Health Monitoring IAM</title>
+                <style>
+                    body {
+                        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+                        background: linear-gradient(135deg, #667eea 0%%, #764ba2 100%%);
+                        min-height: 100vh;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        padding: 20px;
+                    }
+                    .error-container {
+                        background: white;
+                        border-radius: 12px;
+                        padding: 40px;
+                        max-width: 500px;
+                        box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+                        text-align: center;
+                    }
+                    .error-icon { font-size: 48px; margin-bottom: 20px; }
+                    h1 { color: #dc3545; margin-bottom: 20px; }
+                    p { color: #666; line-height: 1.6; }
+                    .btn {
+                        display: inline-block;
+                        margin-top: 20px;
+                        padding: 12px 24px;
+                        background: linear-gradient(135deg, #667eea 0%%, #764ba2 100%%);
+                        color: white;
+                        text-decoration: none;
+                        border-radius: 8px;
+                        font-weight: 600;
+                    }
+                </style>
+            </head>
+            <body>
+                <div class="error-container">
+                    <div class="error-icon">⚠️</div>
+                    <h1>Authentication Error</h1>
                     <p>%s</p>
-                </aside>
-                </body>
-                </html>
-                """.formatted(error)).build();
+                    <a href="javascript:history.back()" class="btn">Go Back</a>
+                </div>
+            </body>
+            </html>
+            """, errorMessage);
+
+        return Response.status(Response.Status.BAD_REQUEST).entity(html).build();
+    }
+
+    private Response buildSuccessResponse(String message) {
+        String html = String.format("""
+            <!DOCTYPE html>
+            <html>
+            <head>
+                <meta charset="UTF-8"/>
+                <title>Success - Health Monitoring IAM</title>
+                <style>
+                    body {
+                        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+                        background: linear-gradient(135deg, #667eea 0%%, #764ba2 100%%);
+                        min-height: 100vh;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        padding: 20px;
+                    }
+                    .success-container {
+                        background: white;
+                        border-radius: 12px;
+                        padding: 40px;
+                        max-width: 500px;
+                        box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+                        text-align: center;
+                    }
+                    .success-icon { font-size: 48px; margin-bottom: 20px; }
+                    h1 { color: #28a745; margin-bottom: 20px; }
+                    p { color: #666; line-height: 1.6; }
+                </style>
+            </head>
+            <body>
+                <div class="success-container">
+                    <div class="success-icon">✅</div>
+                    <h1>Success</h1>
+                    <p>%s</p>
+                </div>
+            </body>
+            </html>
+            """, message);
+
+        return Response.ok(html).build();
+    }
+
+    // ==================== Inner Classes ====================
+
+    private static class AuthorizationRequest {
+        String clientId;
+        String redirectUri;
+        String responseType;
+        String scope;
+        String codeChallenge;
+        String codeChallengeMethod;
+        String state;
+        String username; // Set after login
+    }
+
+    private static class InvalidRequestException extends Exception {
+        public InvalidRequestException(String message) {
+            super(message);
+        }
+    }
+
+    private static class InvalidCredentialsException extends Exception {
+        public InvalidCredentialsException(String message) {
+            super(message);
+        }
     }
 }
